Fix GCMS::ListAccounts returning stale data on iOS.

Marking the listed accounts cache as stale in GCMS is done by listening
to cookie changes (as this will catch any changes).
However, cookie changes notifications are not available on iOS, causing
the cache to be considered valid almost all the time.

This CL correctly marks the cache as stale for the most ususal actions
that will modify the listed accounts (AddAccount and LogOut).

BUG=653546

Review-Url: https://codereview.chromium.org/2394203002
Cr-Commit-Position: refs/heads/master@{#423576}

Former-commit-id: 987cf5a621eae6c77edf3774ba08b3d55bb3bd49