components/signin/core/browser/gaia_cookie_manager_service.cc
@@ -559,6 +559,9 @@ void GaiaCookieManagerService::OnMergeSessionSuccess(const std::string& data) {
           << requests_.front().account_id();
   DCHECK(requests_.front().request_type() ==
          GaiaCookieRequestType::ADD_ACCOUNT);
+
+  list_accounts_stale_ = true;
+
   const std::string account_id = requests_.front().account_id();
   HandleNextRequest();
   SignalComplete(account_id, GoogleServiceAuthError::AuthErrorNone());
@@ -661,6 +664,8 @@ void GaiaCookieManagerService::OnListAccountsFailure(
 void GaiaCookieManagerService::OnLogOutSuccess() {
   DCHECK(requests_.front().request_type() == GaiaCookieRequestType::LOG_OUT);
   VLOG(1) << "GaiaCookieManagerService::OnLogOutSuccess";
+
+  list_accounts_stale_ = true;
 
   fetcher_backoff_.InformOfRequest(true);
   HandleNextRequest();
